# VLQAnalysisFwk

./: .gitmodules  HtZtXAnalysis.md  README.md
src/VLQAnalysis/: .gitignore  CMakeLists.txt  ChangeLog  README.rst  compileScript.sh  setupScript.sh
src/VLQAnalysis/Root/: LinkDef.h  VLQ_AnalysisTools.cxx  VLQ_Analysis_Data2015.cxx  VLQ_FJVTCalibTool.cxx  VLQ_KinReweighter.cxx  VLQ_MVAManager.cxx  VLQ_NtupleData.cxx  VLQ_NtupleReader.cxx  VLQ_Options.cxx  VLQ_OutputData.cxx  VLQ_PropagateSingleTopSystematics.cxx  VLQ_ResonanceMaker.cxx  VLQ_Selector.cxx  VLQ_SmearingTool.cxx  VLQ_TRFManager.cxx  VLQ_TruthManager.cxx  VLQ_TtbarSystematicsManager.cxx  VLQ_VariableComputer.cxx  VLQ_WeightManager.cxx  string_utils.cxx
src/VLQAnalysis/VLQAnalysis/: VLQ_AnalysisTools.h  VLQ_Analysis_Data2015.h  VLQ_Enums.h  VLQ_FJVTCalibTool.h  VLQ_KinReweighter.h  VLQ_MVAManager.h  VLQ_NtupleData.h  VLQ_NtupleReader.h  VLQ_Options.h  VLQ_OutputData.h  VLQ_PropagateSingleTopSystematics.h  VLQ_ResonanceMaker.h  VLQ_Selector.h  VLQ_SmearingTool.h  VLQ_TRFManager.h  VLQ_TruthManager.h  VLQ_TtbarSystematicsManager.h  VLQ_VariableComputer.h  VLQ_WeightManager.h  string_utils.h
src/VLQAnalysis/cmt/: Makefile.RootCore
src/VLQAnalysis/data/: JMR.root  TMVAClassification_MLP.weights_0lep_meffin.xml  TMVAClassification_MLP_1Mass.weights.xml  TopPt13TeV.root  TopPtRw.root  XSection-MC15-13TeV.data  branches_tthbb_ntuples_20_11.txt  branches_vlq_ntuples_00-00-03.txt  kinReweightings_AllBkgd.root  kinReweightings_OnlyTtbar.root  kinReweightings_OnlyWtTtbar.root  kinReweightings_OnlyWtTtbar_AFII.root  kinReweightings_OnlyWtTtbar_PowH7.root  kinReweightings_OnlyWtTtbar_PowHer.root  kinReweightings_OnlyWtTtbar_PowPy8.root  kinReweightings_OnlyWtTtbar_aMCPy.root  kinReweightings_OnlyZjets.root  kinReweightings_OnlyZjets_PowPy8.root  list_weights.list  list_weights_VECIND.list  run_example.sh  setup_commands.txt  signal_xsec_list.json  single_top_syst.root  ttbarSystematics.root  vlq_ZTZt_xsec_list.json  xsec_list.json  xsec_pairvlq_0L.json  xsec_pairvlq_doublet.json
src/VLQAnalysis/data/TMVA/: TMVAClassification_MLP_3Mass.weights.xml
src/VLQAnalysis/data/samples_info/: XSection-MC15-13TeV_AT_xsec.data  xsec_pairvlq.json  xsec_ttst_alt.json
src/VLQAnalysis/doc/: doxygen.conf
src/VLQAnalysis/examples/: run_MVATrainer.sh  run_local_pairprod.sh
src/VLQAnalysis/macros/: scratch_truth_jets.txt
src/VLQAnalysis/macros/macros_carlos/: KinRwHistSmoother.cxx  MakeKinRwHists.cxx  MakeSByBPlot_VLQ.cxx  histolist_Zjets.txt  histolist_ttWt.txt  (+12 more)
src/VLQAnalysis/python/: AddZJetsWeights.py  CheckFitInputs.py  CheckOutputs.py  FitInputsPreProcessor.py  GenerateVariableConfig.py  LaunchAllCouplingReweightings.py  LaunchTRexFitterPairProd.sh  Make2DPlots_IFP.py  MakeBlindingCuts_sVLQ.py  MakeRegionsDictionary.py  MakeSingletopSyst.py  MakeTRexFitterPairProdConfigFiles.sh  MakeVjetsSyst.py  MakeXSecFile.py  PrepareConfigFilesForIFAEPlotter.py  PrepareInputFilesTRexFitter.py  ProduceSampleDATfile.py  ProduceSampleDATfile_mc.py  ReadTRExFitterResults.py  Submit_VLQAnalysis_new.py  Submit_mva_ntuple_new.py  SystRegionHistoScript.py  VLQCouplingReweighter.py  VLQ_BR.py  VLQ_Samples_mc.py  add_tlv_branch.py  addup_weighted_events.py  batch_utils.py  diff_ROOT_files.py  hbsm_run_local.py  hbsm_submit.py  makePDFHessian.sh  makeVJetsEnvelope.sh  merge_regions.py  regions_dictionary.py  regions_dictionary_MEFF2TEV.py  regions_dictionary_pVLQ_newAna_MVA_regions.py  regions_dictionary_pVLQ_newAna_merged_regions.py  regions_dictionary_sVLQ.py  regions_dictionary_sVLQ_blinded.py  (+43 more)
src/VLQAnalysis/share/: trf_patch_extrapc.patch
src/VLQAnalysis/util/: MakeQCDFile.cxx  VLQAnalysis.cxx
(+541 files in other folders)
